<resources>
    <!-- strings text below -->
    <string name="app_name">My Application</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="sign_in">Sign In</string>

    <string name="title_activity_profile">Profile</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">Login failed</string>

    <string name="profile_picture">Profile picture</string>

    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth_mm_dd_yyyy">Date of Birth (MM/DD/YYYY)</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete">Delete account</string>
    <string name="save">Save</string>

    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="back">Back</string>

    <string name="seed_packs">Seed Packs</string>
    <string name="share">Share</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="new_task">New task</string>

    <string name="mood">Mood</string>
    <string name="submit">Submit</string>

    <string name="madbutton">madButton</string>
    <string name="okaybutton">okayButton</string>
    <string name="happy">Happy</string>
    <string name="log_mood_for">Log mood for:</string>

    <string name="name">Name</string>
    <string name="change_name">Change Name</string>
    <string name="music">Music</string>
    <string name="press_submit_if_you_are_done_to_update_plant_progress">Press submit if you are done to update plant progress</string>
    <string name="rain">Rain</string>
    <string name="play">Play</string>

    <string name="about"> Theragarden is a mobile wellness app designed to help users manage stress, track their emotions, and cultivate healthier habits through gamified plant growth.
    Every action you take - logging your mood, completing self-care exercises, or writing a journal entry - helps your virtual plant growth,
    symbolizing your personal progress and consistency.\n \nOur mission is to make mental health care more accessible, private, and rewarding.
        By combining therapy-inspired techniques, mindful journaling, and motivational visuals, Theragarden turns emotional awareness into a creative, uplifting experience.</string>
    <string name="tutorialText">Welcome to Theragarden \n Track your moods, care for yourself, and watch your virtual plants bloom as you grow too
    \n\nYour Garden\n When your first plant fully blooms, you\'ll unlock your virtual garden to showcase your progress
    \n\nMood Check-In\n Start or end your dat with a quick mood check. Pick an emoji that matches how you feel and add a short note. Track your emotions over time to see your patterns
    and progress.\n\nSelf-Care Hub\nAccess relaxing and creative activities anytime.\n\nStats\nView your wellness journey in one place. Track mood, sleep, hydration, and activity streaks.\n\nRewards and Customization\n
    Earn rewards as you complete activities! Unlock seed packs, grow new plants, and decorate your garden with special themes \n\nAbout Page\n Access professional mental-health resources and crisis
    hotline anytime. All links are confidential and always available.</string>
</resources>