<?xml version="1.0" encoding="utf-8"?>
<!-- UI for mood choice activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/dark_gray_brown"
    android:fitsSystemWindows="true"
    android:paddingTop="32dp"
    tools:context=".Mood">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:padding="8dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Back" />

        <TextView
            android:id="@+id/mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/mood"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners" />

        <!-- Date that changes daily -->
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mood"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners" />

        <!-- happy button -->
        <ImageButton
            android:id="@+id/happyButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:src="@drawable/happy"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/happy" />

        <!-- okay button -->
        <ImageButton
            android:id="@+id/okayButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/happyButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/okay"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/okaybutton" />

        <!-- mad button -->
        <ImageButton
            android:id="@+id/madButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/okayButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:padding="15dp"
            android:src="@drawable/mad"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/madbutton" />

        <!-- Submit button -->
        <Button
            android:id="@+id/SubmitMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="109dp"
            android:text="@string/submit" />

    </RelativeLayout>

</LinearLayout>