<?xml version="1.0" encoding="utf-8"?>
<!-- Ui for music activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_brown"
    android:padding="16dp"
    tools:context=".Music"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp">
        <!-- Back button -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"  />
        <!-- Music text -->
        <TextView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:text="@string/music"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/rounded_corners" />
    </RelativeLayout>
    <!-- Holds the music options with their corresponding names and progress bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMusicList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <!-- Submit text and button -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_submit_if_you_are_done_to_update_plant_progress"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>


</LinearLayout>